--- a/index.html
+++ b/index.html
@@ -1,22 +1,44 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>FCN</title>
-</head>
-<body>
-    <table>
-        <tr>
-            <td><a href="https://onlinegdb.com/Eu3887gAy">Byte stuffing</a></td>
-            </tr>
+    <style>
+        table , tr,td{
+            width: 100%;
+            text-align: center;
+            background-color: aqua;
+            border: 2px solid black;
+         font-size: 30px;
+         border-radius: 20px;
+         border-collapse: collapse;
+        }
+        a{
+            text-decoration: none;
+        }
+    </style>
+  </head>
+  <body>
+    <table >
+      <tr>
+        <td><a href="https://onlinegdb.com/Eu3887gAy">Byte stuffing</a></td>
+      </tr>
 
-<tr>            <td><a href="https://onlinegdb.com/FhI4VNtpf">character stuffing</a></td> </tr>
-   <tr>         <td><a href="https://onlinegdb.com/9IUrtZnuS">bit stuffing</a></td> </tr>
-       <tr>     <td><a href="https://onlinegdb.com/TbDhHb5gf">crc</a></td></tr>
-         <tr>   <td><a href="https://onlinegdb.com/JszQlyXQM">hamming code</a></td></tr>
-        
+      <tr>
+        <td>
+          <a href="https://onlinegdb.com/FhI4VNtpf">character stuffing</a>
+        </td>
+      </tr>
+      <tr>
+        <td><a href="https://onlinegdb.com/9IUrtZnuS">bit stuffing</a></td>
+      </tr>
+      <tr>
+        <td><a href="https://onlinegdb.com/TbDhHb5gf">crc</a></td>
+      </tr>
+      <tr>
+        <td><a href="https://onlinegdb.com/JszQlyXQM">hamming code</a></td>
+      </tr>
     </table>
-    
-</body>
+  </body>
 </html>
