--- a/index.html
+++ b/index.html
@@ -39,6 +39,16 @@
       <tr>
         <td><a href="https://onlinegdb.com/JszQlyXQM">hamming code</a></td>
       </tr>
+      <tr>
+        <td><a href="https://onlinegdb.com/WQZMrxWrC">Dijkstra's algorithm</a></td>
+      </tr>
+      <tr>
+        <td><a href="https://onlinegdb.com/PjjJUNc0K"> distance vector routing algorithm.</a></td>
+      </tr>
+      <tr>
+        <td><a href="https://onlinegdb.com/PzEiGqO9I">LEAKY-BUCKET ALGORITHM</a></td>
+      </tr>
+     
     </table>
   </body>
 </html>
